fixed temp chart overflow

--- a/css/weatherstyle.css
+++ b/css/weatherstyle.css
@@ -199,7 +199,7 @@ body {
   overflow: visible;
 }
 
-#rainSVG {
+#humSVG {
   position: absolute;
   z-index: 1;
   width: calc(100% - 2em);
